# QSignalRecorder

./: .appveyor.yml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  QSignalRecorder.cpp  QSignalRecorder.h  shared_export.h
test/: CMakeLists.txt  SignalRecorderTest.cpp  SignalRecorderTest.h
